audit operation implementation