@@ -8,42 +8,43 @@ import org.mindrot.jbcrypt.BCrypt;
 
 import dbmodel.UserData;
 import dbpojo.EmailUser;
+import dbpojo.LoginCredentials;
+import dbpojo.Table;
 import dbpojo.Userdata;
 import loggerfiles.LoggerSet;
-import querybuilder.QueryBuilder;
-import querybuilder.SqlQueryLayer;
-import querybuilder.TableSchema;
-import querybuilder.TableSchema.Email_user;
-import querybuilder.TableSchema.JoinType;
-import querybuilder.TableSchema.Login_credentials;
-import querybuilder.TableSchema.Operation;
-import querybuilder.TableSchema.Statement;
-import querybuilder.TableSchema.tables;
-import querybuilder.TableSchema.user_data;
+import querybuilderconfig.QueryBuilder;
+import querybuilderconfig.SqlQueryLayer;
+import querybuilderconfig.TableSchema;
+import querybuilderconfig.TableSchema.Email_user;
+import querybuilderconfig.TableSchema.JoinType;
+import querybuilderconfig.TableSchema.Login_credentials;
+import querybuilderconfig.TableSchema.Operation;
+import querybuilderconfig.TableSchema.Statement;
+import querybuilderconfig.TableSchema.tables;
+import querybuilderconfig.TableSchema.user_data;
 
 public class UserOperation {
 
 	private LoggerSet logger = new LoggerSet();
-	
-	
 
 	/**
 	 * Creates a new user in the database.
 	 *
-	 * @param data the UserData object containing user details
+	 * @param userdata the UserData object containing user details
 	 * @return the created UserData object or null if an error occurs
 	 * @throws SQLException if a database access error occurs
 	 */
-	public Userdata createUser(Userdata data) throws SQLException {
+	public Userdata createUser(Userdata userdata) throws SQLException {
 //		Connection con = DBconnection.getConnection();
 		QueryBuilder qg = new SqlQueryLayer().createQueryBuilder();
-		int[] val= {-1,-1};
-		int genUserId=0;
+		int[] val = { -1, -1 };
+		int genUserId = 0;
 		try {
-			String password = BCrypt.hashpw(data.getPassword(), BCrypt.gensalt());
+			String password = BCrypt.hashpw(userdata.getPassword(), BCrypt.gensalt());
 //			con.setAutoCommit(false);
-			
+
 			qg.openConnection();
+			userdata.setPassword(password);
 
 			// Insert user data
 //			PreparedStatement ps = con.prepareStatement(
@@ -55,18 +56,12 @@ public class UserOperation {
 //			ps.setString(4, data.getAddress());
 //			ps.setString(5, data.getTimezone());
 //			int val = ps.executeUpdate();
-			
-			
-			
-			
-			
-			
-			 val=qg.insert(tables.user_data, user_data.Name,user_data.password,user_data.phone_no,user_data.address,user_data.timezone)
-					.valuesInsert(data.getName(),password,data.getPhoneno(),data.getAddress(),data.getTimezone()).execute(Statement.RETURN_GENERATED_KEYS);
-            
-			
-		
-			
+
+//			 val=qg.insert(tables.user_data, user_data.Name,user_data.password,user_data.phone_no,user_data.address,user_data.timezone,user_data.created_time,user_data.modified_time)
+//					.valuesInsert(userdata.getName(),userdata.getPassword(),userdata.getPhoneno(),userdata.getAddress(),userdata.getTimezone(),userdata.getCreatedAt(),userdata.getModifiedAt()).execute(Statement.RETURN_GENERATED_KEYS);
+
+			val = qg.insert(userdata).execute(-1);
+
 			if (val[0] == 0) {
 //				con.rollback();
 				qg.rollBackConnection();
@@ -75,57 +70,61 @@ public class UserOperation {
 			}
 
 //			ResultSet id = ps.getGeneratedKeys();
-			if (val[1] !=-1){
-				 genUserId = val[1];
+//			if (val[1] !=-1){
+//				 genUserId = val[1];
+//				
 
-				// Insert login credentials
+			// Insert login credentials
 //				ps = con.prepareStatement("INSERT INTO Login_credentials VALUES (?, ?);");
 //				ps.setInt(1, genUserId);
 //				ps.setString(2, data.getUserName());
 //				val = ps.executeUpdate();
-				
-				val=qg.insert(tables.Login_credentials).valuesInsert(genUserId,data.getLoginCredentials().getUserName()).execute();
-
-				if (val[0] == 0) {
+//				 LoginCredentials loginCredential=userdata.getLoginCredentials();
+//				userdata.getLoginCredentials().setUserID(genUserId);
+//				val=qg.insert(tables.Login_credentials,Login_credentials.log_id,Login_credentials.username,Login_credentials.created_time,Login_credentials.modified_time)
+//						.valuesInsert(loginCredential.getUserId(),loginCredential.getUserName(),loginCredential.getCreatedAt(),loginCredential.getModifiedAt()).execute();
+//
+//				if (val[0] == 0) {
 //					con.rollback();
-					logger.logError("UserOperation", "createUser", "Failed to insert login credentials", null);
-					return null;
-				}
+//					logger.logError("UserOperation", "createUser", "Failed to insert login credentials", null);
+//					return null;
+//				}
 
-				// Insert email data
+			// Insert email data
 //				ps = con.prepareStatement("INSERT INTO Email_user VALUES (?, ?, ?);");
 //				ps.setInt(1, genUserId);
 //				ps.setString(2, data.getCurrentEmail());
 //				ps.setBoolean(3, true);
 //				val = ps.executeUpdate();
-				for(EmailUser i :data.getallemail()) {
-					
-					System.out.println("Email data is"+genUserId+"  "+i.getEmail()+" "+i.getIsPrimary());
-					
-					
-					val=qg.insert(tables.Email_user).valuesInsert(genUserId,i.getEmail(),i.getIsPrimary()).execute();
-					
-				}
-				
-				
+//				for(EmailUser email :userdata.getallemail()) {
+//					
+//					System.out.println("Email data is"+genUserId+"  "+email.getEmail()+" "+email.getIsPrimary());
+//					
+//					email.setEmailID(genUserId);
+//					val=qg.insert(tables.Email_user,Email_user.em_id,Email_user.email,Email_user.is_primary,Email_user.created_time,Email_user.modified_time)
+//							.valuesInsert(email.getEmailId(),email.getEmail(),email.getIsPrimary(),email.getCreatedAt(),email.getModifiedAt())
+//							.execute();
+//					
+//				}
 
-				if (val[0] == 0) {
-//					con.rollback();
-					qg.rollBackConnection();
-					logger.logError("UserOperation", "createUser", "Failed to insert email data", null);
-					return null;
-				}
-				data.setUserId(genUserId);
-			}
+//				if (val[0] == 0) {
+////					con.rollback();
+//					qg.rollBackConnection();
+//					logger.logError("UserOperation", "createUser", "Failed to insert email data", null);
+//					return null;
+//				}
+//				userdata.setUserId(genUserId);
+//			}
 //			con.commit();
 			qg.commit();
-			logger.logInfo("UserOperation", "createUser", "User created successfully: " + data.getLoginCredentials().getUserName());
-			return data;
+			logger.logInfo("UserOperation", "createUser",
+					"User created successfully: " + userdata.getLoginCredentials().getUserName());
+			return userdata;
 
 		} catch (Exception e) {
 			logger.logError("UserOperation", "createUser", "Exception occurred: " + e.getMessage(), e);
 //			con.rollback(); // Ensure rollback in case of exception
-			
+
 			qg.rollBackConnection();
 		} finally {
 //			con.close();
@@ -141,46 +140,108 @@ public class UserOperation {
 	 * @return the verified UserData object or null if verification fails
 	 * @throws SQLException if a database access error occurs
 	 */
-	public Userdata isUser(String userName,String password) throws SQLException {
-		String[] email = new String[5];
+	public Userdata isUser(String userName, String password) throws SQLException {
+//		String[] email = new String[5];
 //		Connection con = DBconnection.getConnection();
 		Userdata val;
-		
+		ArrayList<Table> result = new ArrayList<>();
+
 		QueryBuilder qg = new SqlQueryLayer().createQueryBuilder();
-		
+
 		try {
-			PreparedStatement ps;
+
 			qg.openConnection();
-		
+
+			Userdata user = new Userdata();
 
 			if (userName.contains("@")) {
 //				ps = con.prepareStatement(
 //						"SELECT * FROM user_data ud LEFT JOIN Login_credentials lg ON ud.user_id = lg.id "
 //								+ "LEFT JOIN Email_user eu ON lg.id = eu.em_id WHERE email = ?;");
 //				ps.setString(1, ud.getUserName());
-				
-				
-				val=  (Userdata)   qg.select(tables.user_data)
-					.join(JoinType.left,user_data.user_id, Operation.Equal, Login_credentials.id)
-					.join(JoinType.left,user_data.user_id, Operation.Equal, Email_user.em_id).where(Email_user.email, Operation.Equal, userName)
-					.executeQuery().get(0);
-				
+
+				EmailUser email = new EmailUser();
+				email.setEmail(userName);
+				result = qg.select(email).executeQuery();
+
+				if (result.size() > 0) {
+					email = (EmailUser) result.getFirst();
+
+					LoginCredentials login = new LoginCredentials();
+					login.setUserID(email.getEmailId());
+					user.setLoginCredentials(login);
+					user.setEmail(email);
+
+					user.setID(email.getEmailId());
+
+					result = qg.select(user).executeQuery();
+
+					if (result.size() > 0) {
+
+						user = (Userdata) result.getFirst();
+					} else {
+						logger.logError("UserOperation", "isUser", "Invalid credentials for user: " + userName, null);
+						return null;
+
+					}
+
+				} else {
+					logger.logError("UserOperation", "isUser", "Invalid credentials for user: " + userName, null);
+					return null;
+
+				}
+
+//				val = (Userdata) qg.select(tables.user_data)
+//						.join(JoinType.left, user_data.user_id, Operation.Equal, Login_credentials.log_id)
+//						.join(JoinType.left, user_data.user_id, Operation.Equal, Email_user.em_id)
+//						.where(Email_user.email, Operation.Equal, userName).executeQuery().get(0);
+
 			} else {
 //				ps = con.prepareStatement(
 //						"SELECT * FROM user_data ud LEFT JOIN Login_credentials lg ON ud.user_id = lg.id "
 //								+ "LEFT JOIN Email_user eu ON lg.id = eu.em_id WHERE username = ?;");
 //				ps.setString(1, ud.getUserName());
-				
-				val= (Userdata) qg.select(tables.user_data)
-						.join(JoinType.left,user_data.user_id, Operation.Equal, Login_credentials.id)
-						.join(JoinType.left,user_data.user_id, Operation.Equal, Email_user.em_id).where(Login_credentials.username, Operation.Equal, userName)
-						.executeQuery().get(0);
-				
-			
+				LoginCredentials login = new LoginCredentials();
+				login.setUserName(userName);
+
+				result = qg.select(login).executeQuery();
+
+				if (result.size() > 0) {
+					login = (LoginCredentials) result.getFirst();
+					EmailUser email = new EmailUser();
+					email.setEmailID(login.getUserId());
+
+					user.setLoginCredentials(login);
+					user.setEmail(email);
+
+					user.setID(login.getUserId());
+
+					result = qg.select(user).executeQuery();
+
+					if (result.size() > 0) {
+
+						user = (Userdata) result.getFirst();
+					} else {
+						logger.logError("UserOperation", "isUser", "Invalid credentials for user: " + userName, null);
+						return null;
+
+					}
+
+				} else {
+					logger.logError("UserOperation", "isUser", "Invalid credentials for user: " + userName, null);
+					return null;
+
+				}
+
+//				val = (Userdata) qg.select(tables.user_data)
+//						.join(JoinType.left, user_data.user_id, Operation.Equal, Login_credentials.log_id)
+//						.join(JoinType.left, user_data.user_id, Operation.Equal, Email_user.em_id)
+//						.where(Login_credentials.username, Operation.Equal, userName).executeQuery().get(0);
+
 			}
 
 //			val = ps.executeQuery();
-			if (val != null && BCrypt.checkpw(password, val.getPassword())) {
+			if (result.size() >0  && BCrypt.checkpw(password, user.getPassword())) {
 //				ud.setUserId(val.getInt(1));
 //				ud.setName(val.getString(2));
 //				ud.setPhoneno(val.getString(4));
@@ -188,7 +249,6 @@ public class UserOperation {
 //				ud.setTimezone(val.getString(6));
 //				ud.setUserName(val.getString(8));
 //				ud.setCurrentEmail(val.getString(10));
-				
 
 //				ps = con.prepareStatement("SELECT email, is_primary FROM Email_user WHERE em_id = ?;");
 //				ps.setInt(1, ud.getUserId());
@@ -203,7 +263,7 @@ public class UserOperation {
 //				}
 //				ud.setEmail(email);
 				logger.logInfo("UserOperation", "isUser", "User verified successfully: " + userName);
-				return val;
+				return user;
 			} else {
 				logger.logError("UserOperation", "isUser", "Invalid credentials for user: " + userName, null);
 				return null;
@@ -221,21 +281,23 @@ public class UserOperation {
 	/**
 	 * Updates user data in the database.
 	 *
-	 * @param ud the UserData object containing updated details
+	 * @param userData the UserData object containing updated details
 	 * @return true if the update was successful, false otherwise
 	 * @throws SQLException if a database access error occurs
 	 */
-	public boolean userDataUpdate(Userdata ud,String newPassword) throws SQLException {
+	public boolean userDataUpdate(Userdata userData, String newPassword) throws SQLException {
 //		Connection con = DBconnection.getConnection();
 		QueryBuilder qg = new SqlQueryLayer().createQueryBuilder();
 		UserData user;
-		int[] val= {-1,-1};
+		int userId=userData.getID();
+		int[] result= {-1,-1};
+//		int[] val = { -1, -1 };
 		try {
 //
 //			con.setAutoCommit(false);
-			
+
 			qg.openConnection();
-			if (ud.getPassword() == null || newPassword == null) {
+			if (userData.getPassword() == null || newPassword == null) {
 
 //				PreparedStatement ps = con.prepareStatement(
 //						"UPDATE user_data SET Name = ?, phone_no = ?, address = ?, timezone = ? WHERE user_id = ?;");
@@ -245,25 +307,32 @@ public class UserOperation {
 //				ps.setString(4, ud.getTimezone());
 //				ps.setInt(5, ud.getUserId());
 //				val = ps.executeUpdate();
-				
-				val=qg.update(tables.user_data,user_data.Name,user_data.phone_no,user_data.address,user_data.timezone)
-						.valuesUpdate(ud.getName(),ud.getPhoneno(),ud.getAddress(),ud.getTimezone())
-						.where(user_data.user_id,Operation.Equal,ud.getUserId()).execute();
 
+//				val = qg.update(tables.user_data, user_data.Name, user_data.phone_no, user_data.address,
+//						user_data.timezone, user_data.modified_time)
+//						.valuesUpdate(userData.getName(), userData.getPhoneno(), userData.getAddress(),
+//								userData.getTimezone(), userData.getModifiedAt())
+//						.where(user_data.user_id, Operation.Equal, userData.getUserId()).execute();
+
+				result=  qg.update(userData).execute(userId);
+				
+				
 			} else {
 //				PreparedStatement ps = con.prepareStatement("select password from user_data where user_id=?;");
 //				ps.setInt(1, ud.getUserId());
-				ArrayList<Object> pass = qg.select(tables.user_data, user_data.password).where(user_data.user_id, Operation.Equal,ud.getUserId()).executeQuery();
+//				ArrayList<Object> pass = qg.select(tables.user_data, user_data.password)
+//						.where(user_data.user_id, Operation.Equal, userData.getUserId()).executeQuery();
 //				pass.next();
-				
-				if(pass.get(0) instanceof UserData) {
-					 user=(UserData) pass.get(0);
-				}else {
-					throw new TypeNotPresentException("unable to cast Userdata from  result list Object", null);
-				}
-				if (BCrypt.checkpw(ud.getPassword(), user.getPassword())) {
+
+//				if (pass.get(0) instanceof UserData) {
+//					user = (UserData) pass.get(0);
+//				} else {
+//					throw new TypeNotPresentException("unable to cast Userdata from  result list Object", null);
+//				}
+				if (BCrypt.checkpw(userData.getPassword(), user.getPassword())) {
 
 					String password = BCrypt.hashpw(newPassword, BCrypt.gensalt());
+					userData.setPassword(password);
 
 //					ps = con.prepareStatement(
 //							"UPDATE user_data SET Name = ?, phone_no = ?, address = ?, password = ?, timezone = ? WHERE user_id = ?;");
@@ -274,20 +343,25 @@ public class UserOperation {
 //					ps.setString(5, ud.getTimezone());
 //					ps.setInt(6, ud.getUserId());
 //					val = ps.executeUpdate();
+
+//					val = qg.update(tables.user_data, user_data.Name, user_data.phone_no, user_data.address,
+//							user_data.password, user_data.timezone, user_data.modified_time)
+//							.valuesUpdate(userData.getName(), userData.getPhoneno(), userData.getAddress(),
+//									userData.getPassword(), userData.getTimezone(), userData.getModifiedAt())
+//							.where(user_data.user_id, Operation.Equal, userData.getUserId()).execute();
 					
-					val=qg.update(tables.user_data,user_data.Name,user_data.phone_no,user_data.address,user_data.password,user_data.timezone)
-							.valuesUpdate(ud.getName(),ud.getPhoneno(),ud.getAddress(),password,ud.getTimezone())
-							.where(user_data.user_id, Operation.Equal, ud.getUserId()).execute();
+					
+					result=qg.update(userData).execute(userId);
 
 				} else {
-					val[0] = 0;
+					result[0] = 0;
 					logger.logError("UserOperation", "userDataUpdate", "Incorrect password", null);
 
 				}
 
 			}
 
-			if (val[0] == 0) {
+			if (result[0] == 0) {
 //				con.rollback();
 				qg.rollBackConnection();
 				logger.logError("UserOperation", "userDataUpdate", "Failed to update user data", null);
@@ -298,49 +372,56 @@ public class UserOperation {
 //			ps.setString(1, ud.getUserName());
 //			ps.setInt(2, ud.getUserId());
 //			val = ps.executeUpdate();
-			
-			
-			qg.update(tables.Login_credentials, TableSchema.Login_credentials.username)
-			.valuesUpdate(ud.getLoginCredentials().getUserName())
-			.where(TableSchema.Login_credentials.id,Operation.Equal , ud.getUserId())
-			.execute();
 
-			if (val[0] == 0) {
-				qg.rollBackConnection();
-				
-//				con.rollback();
-				logger.logError("UserOperation", "userDataUpdate", "Failed to update login credentials", null);
-				return false;
-			}
+//			userData.getLoginCredentials().setUserID(userData.getUserId());
+//			
+//			qg.update(tables.Login_credentials, TableSchema.Login_credentials.username, Login_credentials.modified_time)
+//					.valuesUpdate(userData.getLoginCredentials().getUserName(), userData.getModifiedAt())
+//					.where(TableSchema.Login_credentials.log_id, Operation.Equal, userData.getUserId()).execute();
+//
+//			if (val[0] == 0) {
+//				qg.rollBackConnection();
+//
+////				con.rollback();
+//				logger.logError("UserOperation", "userDataUpdate", "Failed to update login credentials", null);
+//				return false;
+//			}
 
 //			ps = con.prepareStatement("DELETE FROM Email_user WHERE em_id = ?;");
 //			ps.setInt(1, ud.getUserId());
 //			val = ps.executeUpdate();
-			
-			val=qg.delete(tables.Email_user).where(Email_user.em_id, Operation.Equal, ud.getUserId()).execute();
+			for (EmailUser email : userData.getallemail()) {
+				val = qg.delete(tables.Email_user).where(Email_user.em_id, Operation.Equal, userData.getID())
+						.and(Email_user.email, Operation.Equal, email.getEmail()).execute();
 
-			if (val[0] == 0) {
-//				con.rollback();
-				
-				qg.rollBackConnection();
-				logger.logError("UserOperation", "userDataUpdate", "Failed to delete existing emails", null);
-				return false;
+				if (val[0] == 0) {
+//					con.rollback();
+
+					qg.rollBackConnection();
+					logger.logError("UserOperation", "userDataUpdate", "Failed to delete existing emails", null);
+					return false;
+				}
+
 			}
 
-			for (EmailUser email : ud.getallemail()) {
+			for (EmailUser email : userData.getallemail()) {
 				if (email != null) {
 //					ps = con.prepareStatement("INSERT INTO Email_user VALUES (?, ?, ?);");
 //					ps.setInt(1, ud.getUserId());
 //					ps.setString(2, email);
 //					ps.setBoolean(3, ud.getPrimaryMail()));
 //					val = ps.executeUpdate();
-					
-					
-					
-					val=qg.insert(tables.Email_user).valuesInsert(ud.getUserId(),email.getEmail(),email.getIsPrimary()).execute();
+
+					email.setEmailID(userData.getID());
+
+					val = qg.insert(tables.Email_user, Email_user.em_id, Email_user.email, Email_user.is_primary,
+							Email_user.created_time, Email_user.modified_time)
+							.valuesInsert(userData.getID(), email.getEmail(), email.getIsPrimary(),
+									email.getModifiedAt(), email.getModifiedAt())
+							.execute();
 					if (val[0] == 0) {
 //						con.rollback();
-						
+
 						qg.rollBackConnection();
 						logger.logError("UserOperation", "userDataUpdate", "Failed to insert new email: " + email,
 								null);
@@ -349,19 +430,18 @@ public class UserOperation {
 				}
 			}
 //			con.commit();
-			
+
 			qg.commit();
 			logger.logInfo("UserOperation", "userDataUpdate",
-					"User data updated successfully for: " + ud.getLoginCredentials().getUserName());
+					"User data updated successfully for: " + userData.getLoginCredentials().getUserName());
 			return true;
 
 		}
-		
-		
+
 		catch (Exception e) {
 			logger.logError("UserOperation", "userDataUpdate", "Exception occurred: " + e.getMessage(), e);
 //			con.rollback(); // Ensure rollback in case of exception
-			
+
 			qg.rollBackConnection();
 		} finally {
 			qg.closeConnection();
@@ -376,26 +456,28 @@ public class UserOperation {
 	 * @return true if the deletion was successful, false otherwise
 	 * @throws SQLException if a database access error occurs
 	 */
-	public Boolean deleteUserProfile(int userId) throws SQLException {
+	public Boolean deleteUserProfile(Userdata userData) throws SQLException {
 //		Connection con = DBconnection.getConnection();
 		QueryBuilder qg = new SqlQueryLayer().createQueryBuilder();
-		int[] val= {-1,-1};
+		int userId=userData.getID();
+		int[] result = { -1, -1 };
 		try {
 			qg.openConnection();
 
-			 val = qg.delete(tables.user_data)
-					.where(user_data.user_id, Operation.Equal, userId).execute();
+//			result = qg.delete(tables.user_data).where(user_data.user_id, Operation.Equal, userData.getUserId()).execute();
 
+			
+			result=qg.delete(userData).execute(userId);
 //			PreparedStatement ps = con.prepareStatement("DELETE FROM user_data WHERE user_id = ?;");
 //			ps.setInt(1, userId);
 //			int val = ps.executeUpdate();
-			if (val[0] != 0) {
+			if (result[0] != -1) {
 				logger.logInfo("UserOperation", "deleteUserProfile",
-						"User profile deleted successfully for userId: " + userId);
+						"User profile deleted successfully for userId: " + userData.getID());
 				return true;
 			} else {
 				logger.logError("UserOperation", "deleteUserProfile",
-						"Failed to delete user profile for userId: " + userId, null);
+						"Failed to delete user profile for userId: " + userData.getID(), null);
 				return false;
 			}
 		} catch (Exception e) {
@@ -415,8 +497,11 @@ public class UserOperation {
 	 * @throws SQLException if a database access error occurs
 	 */
 	public Userdata getUserData(int userId) throws SQLException {
-		String[] email = new String[5];
-	    Userdata val;
+//		String[] email = new String[5];
+		Userdata user;
+		ArrayList<Table> result=new ArrayList<>();
+		
+		
 //		Connection con = DBconnection.getConnection();
 		QueryBuilder qg = new SqlQueryLayer().createQueryBuilder();
 		try {
@@ -424,21 +509,28 @@ public class UserOperation {
 //					"SELECT * FROM user_data ud LEFT JOIN Login_credentials lg ON ud.user_id = lg.id WHERE user_id = ?;");
 //			ps.setInt(1, userId);
 //			ResultSet val = ps.executeQuery();
-			
+
 			qg.openConnection();
-			
-			val=(Userdata) qg.select(tables.user_data)
-					.join(JoinType.left, user_data.user_id, Operation.Equal,Login_credentials.id)
-					.join(JoinType.left, user_data.user_id, Operation.Equal, Email_user.em_id)
-					.where(user_data.user_id, Operation.Equal, userId).executeQuery().getFirst();
-					
-			
+			user=new Userdata();
+			user.setID(userId);
+			LoginCredentials login=new LoginCredentials();
+			login.setUserID(userId);
+			EmailUser email=new EmailUser();
+			email.setEmailID(userId);
+			user.setLoginCredentials(login);
+			user.setEmail(email);
+
+//			user = (Userdata) qg.select(tables.user_data)
+//					.join(JoinType.left, user_data.user_id, Operation.Equal, Login_credentials.log_id)
+//					.join(JoinType.left, user_data.user_id, Operation.Equal, Email_user.em_id)
+//					.where(user_data.user_id, Operation.Equal, userId).executeQuery().getFirst();
+
 			
 			
 			
 //			UserData ud = new UserData();
 
-			if (val !=null) {
+			if (user != null) {
 //				ud.setUserId(val.getInt(1));
 //				ud.setName(val.getString(2));
 //				ud.setPhoneno(val.getString(4));
@@ -460,7 +552,7 @@ public class UserOperation {
 //				ud.setEmail(email);
 				logger.logInfo("UserOperation", "getUserData",
 						"User data retrieved successfully for userId: " + userId);
-				return val;
+				return user;
 			} else {
 				logger.logError("UserOperation", "getUserData", "No user found for userId: " + userId, null);
 			}
